applied a flip animation to cards. backface-visibility: hidden was causing the back of card to not appear on the flip. This is a temporary fix

--- a/memory-card/src/App.css
+++ b/memory-card/src/App.css
@@ -5,22 +5,115 @@
   text-align: center;
 }
 
+/*
+background-image: linear-gradient(
+    rgb(3, 151, 171),
+    rgb(10, 50, 60),
+    rgb(200, 155, 60),
+    rgb(10, 50, 60),
+    rgb(10, 50, 60) rgb(3, 151, 171)
+  );
+*/
+
+/* Add styles to create the flipping card effect */
+
+.cardWithName {
+  width: 230px;
+  height: 410.63px;
+
+  perspective: 1000px;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition: transform 0.5s;
+  border-radius: 25px; /* Apply border-radius to the entire card */
+  border: 1px solid white;
+  overflow: hidden;
+  background-color: rgb(3, 151, 171);
+  transform-style: preserve-3d;
+}
+
+.card:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
+
+.cardWithName.flipped .card {
+  transform: rotateY(180deg);
+
+  .cardBack {
+    z-index: 1;
+  }
+  .cardFront {
+    z-index: 0;
+  }
+}
+
+.cardFront,
+.cardBack {
+  position: absolute;
+  /*
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  */
+  align-items: center;
+  justify-content: center;
+}
+
+.cardFront {
+  width: calc(100% - 30px);
+  height: calc(100% - 30px);
+  border-radius: 25px;
+  margin: 0;
+  padding: 15px;
+  z-index: 1;
+}
+
+.cardBack {
+  width: 100%;
+  height: 100%;
+  transform: rotateY(180deg);
+  z-index: 0;
+}
+
 .img {
-  width: 200px;
+  width: 100%;
   object-fit: cover;
   border-radius: 20px;
-  margin: 5px;
 }
 img {
-  width: 200px;
+  width: 100%;
   object-fit: cover;
-  border-radius: 20px;
+}
+
+#allImages {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: 25px;
+  row-gap: 55px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 25px;
+}
+
+#backCardImg {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+p {
+  margin: 0;
 }
 /*
 img:hover {
   transform: scale(1.05);
 }
-*/
+
 
 #btns {
   margin-bottom: 25px;
@@ -30,25 +123,20 @@ p {
   margin: 0;
 }
 
-#allImages {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 15px;
-  align-items: center;
-  justify-content: center;
-}
+
 
 .cardWithName:hover {
   transform: scale(1.06);
   cursor: pointer;
-  /*transform: rotateY(90deg);*/
+  /*transform: rotateY(90deg);
 }
 
 .cardContainer {
+  /*
   transition: 0.5s;
   transform-style: preserve-3d;
   transform: rotateY(0deg);
+ 
   perspective: 1000px;
   height: 405.63px;
 
@@ -57,8 +145,16 @@ p {
     transition: transform 0.5s ease;
     transform-style: preserve-3d;
   }
-  */
+  
 }
+
+.card {
+  width: 200px;
+  height: 405.63px;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+}
+
 .cardWithName {
   border-radius: 25px;
   border: 1px solid white;
@@ -68,14 +164,19 @@ p {
     rgb(10, 50, 60),
     rgb(200, 155, 60),
     rgb(10, 50, 60),
-    rgb(10, 50, 60) /*rgb(3, 151, 171)*/
+    rgb(10, 50, 60) /*rgb(3, 151, 171)
   );
 
   transform-style: preserve-3d;
+  perspective: 500px;
   transition: 0.5s;
 }
 
-.cardWithName.flipped {
+.card.unflipped {
+  transform: rotateY(0deg);
+}
+
+.card.flipped {
   transform: rotateY(180deg);
 }
 
@@ -92,12 +193,20 @@ p {
   gap: 25px;
 }
 
-.cardBack {
-  display: none;
+.cardFront {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: rotateY(0deg);
+}
 
-  &.flipped {
-    display: block;
-  }
+.cardBack {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: rotateY(180deg);
 }
 
 /*
